--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -47,16 +47,7 @@
                     <a class="nav__list-option-link" href="/standings">Clasificación</a>
                 </li>
                 <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="/create-tournament">Crear torneo</a>
-                </li>
-                <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="/lottery-tournament-selection">Sortear equipos</a>
-                </li>
-                <li id="" class="nav__list-option">
                     <a class="nav__list-option-link" href="/fixture">Fixture</a>
-                </li>
-                <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="/upload-games">Cargar partidos</a>
                 </li>
                 <li id="" class="nav__list-option">
                     <a class="nav__list-option-link" href="/records">Récords</a>
@@ -64,6 +55,15 @@
                 <li id="" class="nav__list-option">
                     <a class="nav__list-option-link" href="/face-to-face">Mano a mano</a>
                 </li>
+                <li id="" class="nav__list-option">
+                    <a class="nav__list-option-link" href="/create-tournament">Crear torneo</a>
+                </li>
+                <li id="" class="nav__list-option">
+                    <a class="nav__list-option-link" href="/lottery-tournament-selection">Sortear equipos</a>
+                </li>
+                <li id="" class="nav__list-option">
+                    <a class="nav__list-option-link" href="/upload-game">Cargar partidos</a>
+                </li>        
             </ul>
         </nav>
     </header>
