--- a/public/scss/partials/_fixture-id.scss
+++ b/public/scss/partials/_fixture-id.scss
@@ -56,7 +56,7 @@
                 border: 0;
                 cursor: pointer;
                 font-size: 0.875rem;
-                resize: none;
+                // resize: none;
                 text-align: center;
                 width: 100px;
 
